[gd_scene load_steps=2 format=3 uid="uid://bs7ysxssej6h4"]

[ext_resource type="Script" uid="uid://d3fb31vjajr2v" path="res://Scripts/item_slot.gd" id="1_qaprs"]

[node name="ItemSlot" type="ColorRect"]
custom_minimum_size = Vector2(64, 64)
color = Color(0.86, 0.80883, 0.7138, 1)
script = ExtResource("1_qaprs")

[node name="ItemSlotMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="ItemSlotBkg" type="ColorRect" parent="ItemSlotMargin"]
layout_mode = 2
mouse_filter = 2
color = Color(0.8901961, 0.8392157, 0.7647059, 1)

[node name="ItemTexture" type="TextureRect" parent="ItemSlotMargin/ItemSlotBkg"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="NumItems" type="Label" parent="ItemSlotMargin/ItemSlotBkg"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 33.0
offset_top = 38.0
offset_right = 58.0
offset_bottom = 58.0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "0"
horizontal_alignment = 1
